--- a/Bruce_Decker_Lab2/Base.lproj/Main.storyboard
+++ b/Bruce_Decker_Lab2/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kpi-KN-caT">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="7Y7-qE-Oap">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="mZf-5w-y9F">
+            <objects>
+                <viewController id="8H9-Pb-fie" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DjN-mr-cah"/>
+                        <viewControllerLayoutGuide type="bottom" id="S4I-9R-KbS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="f9w-hu-J1e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="PP8-Av-MiF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1rm-eu-tmS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1988" y="-535"/>
+        </scene>
         <!--Comic List-->
         <scene sceneID="Q2N-5W-BBr">
             <objects>
@@ -23,7 +42,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="140"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jVA-ax-Fg1" id="FrG-m8-sOA">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="139.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="139"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q9G-t6-MR4">
@@ -55,7 +74,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ww1-Yy-oRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1048.8" y="142.57871064467767"/>
+            <point key="canvasLocation" x="1988" y="142.57871064467767"/>
         </scene>
         <!--My Detail View Controller-->
         <scene sceneID="95t-Js-cQa">
@@ -114,12 +133,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4bX-ST-3oZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2101.5999999999999" y="142.57871064467767"/>
+            <point key="canvasLocation" x="3040.8000000000002" y="142.57871064467767"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="q6e-fT-mL3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kpi-KN-caT" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Ike-Pu-gzo"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="dIB-Ul-XKJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -132,7 +152,44 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Yrk-ha-bWA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="109.59999999999999" y="142.57871064467767"/>
+            <point key="canvasLocation" x="1048.8" y="142.57871064467767"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="RVo-oC-WcI">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="7Y7-qE-Oap" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="7Et-BE-3mv">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="kpi-KN-caT" kind="relationship" relationship="viewControllers" id="Fy1-7Y-PQc"/>
+                        <segue destination="bk1-xH-sU6" kind="relationship" relationship="viewControllers" id="SWD-hN-bUm"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="01y-Vm-Wc3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-95" y="-240"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="SW9-ik-Gwe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bk1-xH-sU6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="0O0-Rw-KvT"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="z5r-r9-Yz5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8H9-Pb-fie" kind="relationship" relationship="rootViewController" id="OeP-4T-nO8"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zUE-6Y-I4G" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1049" y="-534"/>
         </scene>
     </scenes>
 </document>
